[package]
name = "pnet-test"
version = "0.1.0"
authors = ["Alexander Polakov <apolyakov@beget.ru>"]
build = "build.rs"

[dependencies]

[build-dependencies.pnet_macros]
git = "https://github.com/libpnet/libpnet"
features = [ "with-syntex" ]

[build-dependencies.syntex]
version = "0.31"

[dependencies.pnet_macros_support]
version = "0.1.0"

[dependencies.pnet]
version = "0.9.0"
